--- a/src/components/MobileChat.css
+++ b/src/components/MobileChat.css
@@ -28,7 +28,7 @@
 
 .message.user {
   align-self: flex-end;
-  background-color: #1a73e8;
+
   color: white;
   border-bottom-right-radius: 4px;
   margin-left: 24px;
